apps/htb/htb-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: htb-frontend
  namespace: htb
spec:
  selector:
    matchLabels:
      app: htb-frontend
  template:
    metadata:
      labels:
        app: htb-frontend
    spec:
      containers:
      - name: htb-frontend
        image: ghcr.io/alexvegas22/htb:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
