apps/htb/htb-frontend/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: htb-frontend
  namespace: htb
spec:
  hostnames:
    - htb.m15ty.com
  parentRefs:
    - name: main-gateway
      namespace: gateway
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: htb-frontend
          port: 80
